--- a/05_antd/02_布局/vite-project/index.html
+++ b/05_antd/02_布局/vite-project/index.html
@@ -17,7 +17,8 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <!-- crossorigin="anonymous" 用于告诉浏览器以匿名身份加载脚本，有助于解决跨域问题 -->
+  <script type="module" src="/src/main.jsx" crossorigin="anonymous"></script>
 
 </body>
 
