--- a/05_antd/02_布局/vite-project/index.html
+++ b/05_antd/02_布局/vite-project/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,8 +12,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro" />
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ecolens System -- 基于 React + Vite + OpenLayers 的 跨平台生态监测地图服务</title>
+  <title>Ecolens System -- 基于 React + Vite + TypeScript 的 高精度生态监测地图服务平台</title>
 </head>
 
 <body>
