--- a/05_antd/02_布局/vite-project/index.html
+++ b/05_antd/02_布局/vite-project/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +17,7 @@
 <body>
   <div id="root"></div>
   <!-- crossorigin="anonymous" 用于告诉浏览器以匿名身份加载脚本，有助于解决跨域问题 -->
-  <script type="module" src="/src/main.jsx" crossorigin="anonymous"></script>
+  <script type="module" src="/src/main.tsx" crossorigin="anonymous"></script>
 
 </body>
 
